--- a/style.css
+++ b/style.css
@@ -1,12 +1,19 @@
 h1{
- font-size:80%;   
+ font-size:70%;   
+}
+h2{
+    font-size: 50px;
+}
+p{
+    color: dimgrey;
 }
 body {
+    margin: 0%;
     font-family: 'Crimson Pro', serif;
     font-size: 48px;
   }
-.name-highlight{
-    color: orange;
+.red-highlight{
+    color: red;
 }
 .haif-width{
     width: 40%;
@@ -16,4 +23,25 @@ body {
 }
 .haif-width img{
     width: 100%;
+}
+.top-banner{
+    background-image: url("images/top-banner.png");
+    background-repeat: no-repeat;
+}
+section{
+    height:500px;
+    padding-bottom: 150px;
+}
+.link-button{
+    text-decoration: none;
+ background-image: linear-gradient(45deg, lightsalmon, tomato);
+    padding: 10px 20px;
+   border-radius: 5px;
+   color: pink; 
+   font-weight: 700;
+}
+.dream-area{
+background-image: url("images/dream-bg.png");
+background-repeat: no-repeat;
+background-position: right;
 }
